--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+header{
+  display:flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-items: center;
+  justify-content: space-between;
+}
+
+.nav{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+
+}
+.nav-item{
+  list-style-type: none;
+  padding: 5px;
+  text-align: right;
+}
