--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   text-align: center;
 }
@@ -126,7 +126,7 @@ footer {
 }
 
 .project img {
-  width: 45vw;
+  width: 35vw;
 }
 
 .heads {
@@ -158,27 +158,21 @@ img {
   height: 90%;
 }
 
-@media (max-width: 770px) {
-  .nav,
-  .menubar {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
-}
+
 
 .resume {
   text-align: center;
+ 
 }
 
 .skillList p {
-  color: black;
+  color:white;
   font-size: 26px;
   font-weight: bold;
+ 
 }
 .skillList p:hover {
-  color: orange;
+  color: yellow;
   font-size: 28px;
   font-weight: bold;
 }
@@ -218,3 +212,37 @@ img {
   text-align: center;
   font-size: 32px;
 }
+
+.setskills {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
+
+.front,.back,.tech{
+  flex: 0 0 33%;
+  background-color: black;
+}
+
+.front h1,.back h1,.tech h1{
+  color: yellow;
+}
+
+@media (max-width: 770px) {
+  .nav,
+  .menubar {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }}
+  
+@media (max-width: 770px) {
+  .setskills{
+    flex-direction: column;
+    flex-wrap: wrap;
+    /* justify-content: space-evenly; */
+}}
