--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 html {
   height: 100%;
   box-sizing: border-box;
-  width: 100vw;
+  /* width: 100vw; */
 }
 body {
   box-sizing: border-box;
@@ -106,7 +106,8 @@ footer {
 
 .me {
   padding-left: 15vw;
-  width: 80vw;
+  /* width: 80vw; */
+  max-width: 80%;
   display: flex;
   align-items: center;
 }
@@ -155,8 +156,10 @@ footer {
 
 img {
   /* flex-direction: row; */
-  width: 100%;
-  height: 90%;
+  /* width: 100%; */
+  /* height: 90%; */
+  max-width: 100%;
+  max-height: 100%;
 }
 
 
